--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
+    "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
