--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
