--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
@@ -28,6 +29,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.2"
